--- a/okhttp-sse/build.gradle
+++ b/okhttp-sse/build.gradle
@@ -14,6 +14,7 @@ dependencies {
   testImplementation project(':mockwebserver')
   testImplementation deps.junit
   testImplementation deps.assertj
+  testImplementation deps.guava
   testCompileOnly deps.jsr305
 }
 
