--- a/okhttp-testing-support/build.gradle
+++ b/okhttp-testing-support/build.gradle
@@ -2,8 +2,14 @@ dependencies {
   api project(':okhttp')
   api deps.junit
   api deps.assertj
-  api deps.bouncycastle
-  api deps.bouncycastletls
+  api deps.bouncycastledebug
+  implementation deps.bouncycastlepkix, {
+    // prefer debug build for our own testing
+    exclude module:"bcprov-jdk15on"
+  }
+  implementation deps.bouncycastletls, {
+    exclude module:"bcprov-jdk15on"
+  }
   api deps.conscrypt
   api deps.corretto
   api deps.openjsse
